--- a/PodTube/Client/Editor/_Imports.razor
+++ b/PodTube/Client/Editor/_Imports.razor
@@ -1,3 +1,5 @@
 ﻿@using Radzen
 @using Radzen.Blazor
 @using Orientation = Radzen.Orientation
+@using DialogService = Radzen.DialogService
+@using DialogOptions = Radzen.DialogOptions
