--- a/PodTube/Client/Components/Videos/VideoPlayer/PodTubeVideoPlayer.razor
+++ b/PodTube/Client/Components/Videos/VideoPlayer/PodTubeVideoPlayer.razor
@@ -40,6 +40,7 @@
                         Guid = Guid.NewGuid(),
                         Url = a
                     }).ToList();
+                UpdatePreplay();
                 ResetPlayback();
             }
         }
